# dune-common

./: .codechecker.json  .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  DuneCommonConfig.cmake.in  INSTALL  LICENSE.md  MANIFEST.in  Makefile.am  README  README.CVS  README.SVN  README.md  TODO  Toolchain-Ubuntu-mingw32.cmake  __init__.py  _common.cc  _typeregistry.cc  algorithm.py  autogen.sh  builder.py  checkconfiguration.py  common.hh  compatibility.py  config.h.cmake  configure.ac  database.py  densematrix.hh  densevector.hh  dimrange.hh  dune-common-config.cmake.in  dune-common-config.h.cmake  dune-common.pc.cmake  dune-common.pc.in  dune-uncrustify.cfg  dune.module  (+28 more)
am/: CMakeLists.txt  Makefile.am  checklog  cmake-pkg-config  documentation  doxygen  global-rules  headercheck  inkscape.am  latex  no-check-without-lib  sourcescheck  top-rules  update-libs  webstuff
cmake/modules/: AddBLASLapackFlags.cmake  AddGMPFlags.cmake  AddLapackFlags.cmake  AddMETISFlags.cmake  AddMPFRFlags.cmake  AddMPIFlags.cmake  AddPTScotchFlags.cmake  AddParMETISFlags.cmake  AddQuadMathFlags.cmake  AddSpdlogFlags.cmake  AddSuiteSparseFlags.cmake  AddTBBFlags.cmake  AddThreadsFlags.cmake  AddUMFPackFlags.cmake  AddVcFlags.cmake  CMakeBuiltinFunctionsDocumentation.cmake  CMakeLists.txt  CheckCXX11Features.cmake  CheckCXXFeatures.cmake  CheckForPthreads.c  CheckSharedPtr.cmake  DUNEDoc.cmake  DUNEDoxygen.cmake  DUNEMPI.cmake  DuneAddLibrary.cmake  DuneAddPybind11Module.cmake  DuneAddTest.cmake  DuneBoost.cmake  DuneCMakeCompat.cmake  DuneCMakePackageConfigHelpers.cmake  DuneCheckCXXSourceCompiles.cmake  DuneCommonConfig.cmake.in  DuneCommonMacros.cmake  DuneConfigFile.cmake  DuneCxaDemangle.cmake  DuneDeclareTestLabel.cmake  DuneDefaultIncludeDirectories.cmake  DuneDoc.cmake  DuneDoxygen.cmake  DuneEnableAllPackages.cmake  (+79 more)
cmake/scripts/: BuildTests.cmake.in  CMakeLists.txt  CreateDoxyFile.cmake  FinalizeHeadercheck.cmake  FindFiles.cmake  InstallDoxygen.cmake  InstallFile.cmake  Makefile.am  RunDoxygen.cmake  WritePythonCMakeMetadata.cmake  checkvenvconf.py  conf.py.in  envdetect.py  extract_cmake_data.py  generate_cmake_command_pages.py  index.rst.in  install_python_package.cmake  main77.cc  main77.cc.in  module_library.cc.in  pyversion.py  run-in-dune-env.sh.in  set-dune-pythonpath.sh.in  setup.py.in  sphinx_cmake_dune.py  sphinx_moderncmakedomain.py  sphinx_moderncmakedomain.py.license  venvpath.py
common/: .gitignore  Makefile.am  Stack.hh  alignment.hh  array.hh  arraylist.hh  autoptr.hh  bartonnackmanifcheck.hh  bigunsignedint.hh  binaryfunctions.hh  bitfield.hh  bitsetvector.hh  blockbitfield.hh  capabilities.hh  collectivecommunication.hh  configparser.cc  configparser.hh  debugstream.hh  deprecated.hh  dlist.cc  dlist.hh  dynamictype.hh  enumset.hh  exceptions.hh  exprtmpl.cc  exprtmpl.hh  fassign.hh  fixedarray.hh  fixedvector.hh  float_cmp.cc  float_cmp.hh  fmatrix.hh  fmatrixev.hh  function.hh  functionspace.hh  fvector.hh  gcd.hh  genericiterator.hh  geometrytype.hh  helpertemplates.hh  (+35 more)
common/exprtmpl/: exprexpr.inc  norm.inc  scalar.inc
common/test/: .gitignore  Makefile.am  arraylisttest.cc  exprtmpl.cc  (+32 more)
disc/: .gitignore  Makefile.am
doc/: .gitignore  .wmlrc  Buildsystem  CMakeLists.txt  CodingStyles  Doxydep  Doxyfile  Makefile.am  buildsystem.wml  contrib-software.wml  doxy-footer.html  doxy-header.html  dune-doxy.css  dunecontrol.1  example.opts  index.wml  installation-notes-bluegenep.wml  installation-notes.wml  simd-abstraction.md  view-concept.wml
dune/: CMakeLists.txt  Makefile.am
fem/: Makefile.am  basefunctions.hh  combinedoperator.hh  dfadapt.hh  dgspace.hh  discfuncarray.cc  discfuncarray.hh  discretefeopimp.hh  discretefunction.cc  discretefunction.hh  discretefunctionspace.hh  discreteoperator.hh  discreteoperatorimp.hh  dofiterator.hh  dofmanager.hh  dofstorage.hh  dofstoragearray.hh  fastbase.cc  fastbase.hh  fastquad.hh  fem.hh  feop.hh  feoperator.hh  functionspace.hh  gaussquadimp.cc  gaussquadimp.hh  gaussquadrature.cc  gaussquadrature.hh  inverseoperators.hh  l2projection.hh  lagrangebase.hh  localbase.hh  localfunction.hh  localfunctionarray.hh  pwbilinfunc.hh  pwconstfunc.hh  pwlinfunc.hh  quadlqh.hh  quadrature.hh  quadtetratri.hh  (+1 more)
grid/: .gitignore  Makefile.am  albertagrid.hh  albertgrid.hh  alu3dgrid.hh  bsgrid.hh  onedgrid.hh  reftopology.cc  reftopology.hh  sgrid.hh  simplegrid.hh  spgrid.hh  uggrid.hh  yaspgrid.hh
istl/: .gitignore  Makefile.am  README.istl-dist  allocator.hh  basearray.hh  bcrsmatrix.hh  bdmatrix.hh  bvector.hh  communicator.hh  example.cc  fmatrix.hh  fvector.hh  gsetc.hh  ilu.hh  indexset.hh  indicessyncer.hh  interface.hh  io.hh  istl.hh  istlexception.hh  localindex.hh  matrixindexset.hh  matrixutils.hh  mpitraits.hh  operators.hh  ownercopy.hh  owneroverlapcopy.hh  plocalindex.hh  precision.hh  preconditioners.hh  remoteindices.hh  scalarproducts.hh  schwarz.hh  selection.hh  solvercategory.hh  solvers.hh  vbcrsmatrix.hh  vbvector.hh
lib/: .gitignore  CMakeLists.txt  Makefile.am  amirameshwriter.cc  dunecommonam2cmake.lib  dunemodules.lib  example.cc  gridwriter.cc
m4/: CMakeLists.txt  Makefile.am  TODO  acx_blas.m4  acx_lapack.m4  acx_mpi.m4  acx_pthread.m4  albert.m4  alberta.m4  alu3dgrid.m4  alugrid.m4  ax_boost_base.m4  ax_check_gl.m4  blas.m4  boost_fusion.m4  cuda.m4  cxx0x_compiler.m4  cxx0x_nullptr.m4  cxx0x_rvaluereference.m4  cxx0x_static_assert.m4  cxx0x_variadic.m4  cxx0x_variadic_constructor_sfinae.m4  cxx11_alignof.m4  cxx11_compiler.m4  cxx11_conditional.m4  cxx11_constexpr.m4  cxx11_final.m4  cxx11_initializer_list.m4  cxx11_is_indexable_support.m4  cxx11_lambda_expr.m4  cxx11_noexcept.m4  cxx11_range_based_for.m4  cxx11_std_declval.m4  dimension.m4  dune.m4  dune_all.m4  dune_amira.m4  dune_autobuild.m4  dune_boost_base.m4  dune_check_lib.m4  (+46 more)
python/: CMakeLists.txt  MANIFEST.in  pyproject.toml.in  setup.py.in
quadrature/: .gitignore  Makefile.am  barycenter.hh  dunequad.hh  fixedorder.hh  gaussquadrature.hh  quadraturerules.cc  quadraturerules.hh
(+1502 files in other folders)
