# $Id$

SUBDIRS = localbase operator

femincludedir = $(includedir)/dune/fem
feminclude_HEADERS = discretefunction.hh \
                     discreteoperator.hh \
                     fem.hh \
                     functionspace.hh \
                     gaussquadrature.cc \
                     gaussquadrature.hh \
                     localbase.hh
