# $Id$

SUBDIRS = common discfuncarray gaussquadrature quadlqh

femincludedir = $(includedir)/dune/fem
feminclude_HEADERS = \
              discfuncarray.hh \
              discreteoperatorimp.hh \
              feoperator.hh \
              gaussquadrature.hh \
              inverseoperators.hh \
              quadlqh.hh \
              quadtetratri.hh
