# $Id$

SUBDIRS = common dgspace discfuncarray feop lagrangebase norms \
  operator transfer

femincludedir = $(includedir)/dune/fem
feminclude_HEADERS = dfadapt.hh dgspace.hh discfuncarray.hh \
  discretefeopimp.hh discreteoperatorimp.hh dofmanager.hh feoperator.hh \
  feop.hh inverseoperators.hh l2projection.hh lagrangebase.hh

include $(top_srcdir)/am/sourcescheck
