# $Id$

ALLM4S = acx_blas.m4 acx_mpi.m4 acx_pthread.m4 alberta.m4 alugrid.m4 \
         ax_check_gl.m4 ax_lang_compiler_ms.m4 dune_all.m4 \
         dune_amira.m4 dune_compiler.m4 dune_deprecated.m4 \
         dune_griddim.m4 dune_exprtmpl.m4 dune_linkcxx.m4 dune.m4 \
         dune_mpi.m4 dune_docu.m4 dune_psurface.m4 dune_streams.m4 \
         f5.m4 fortran_overwrite.m4 grape.m4 hdf5.m4 \
         immdx_lib_metis.m4 inkscape.m4 mpi-config.m4 opengl.m4 \
         parmetis.m4 superlu-dist.m4 superlu.m4 ug.m4 xdr.m4 \
         acx_lapack.m4 dune_common.m4 dune_istl.m4 pardiso.m4 \
		 dune_autobuild.m4


aclocaldir = $(datadir)/aclocal
aclocal_DATA = $(ALLM4S)

EXTRA_DIST = $(ALLM4S)

include $(top_srcdir)/am/global-rules
