install(FILES
  AddGMPFlags.cmake
  AddMETISFlags.cmake
  AddMPIFlags.cmake
  AddParMETISFlags.cmake
  AddPTScotchFlags.cmake
  AddQuadMathFlags.cmake
  AddSuiteSparseFlags.cmake
  AddTBBFlags.cmake
  AddVcFlags.cmake
  CheckCXXFeatures.cmake
  CMakeBuiltinFunctionsDocumentation.cmake
  DuneAddPybind11Module.cmake
  DuneCheckCXXSourceCompiles.cmake
  DuneCMakeCompat.cmake
  DuneCommonMacros.cmake
  DuneConfigFile.cmake
  DuneCxaDemangle.cmake
  DuneDoc.cmake
  DuneDoxygen.cmake
  DuneEnableAllPackages.cmake
  DuneExecuteProcess.cmake
  DuneInstance.cmake
  DuneMacros.cmake
  DuneModuleDependencies.cmake
  DuneModuleInformation.cmake
  DuneMPI.cmake
  DunePathHelper.cmake
  DunePkgConfig.cmake
  DuneProject.cmake
  DunePythonCommonMacros.cmake
  DunePythonFindPackage.cmake
  DunePythonInstallPackage.cmake
  DunePythonMacros.cmake
  DunePythonRequireVersion.cmake
  DunePythonTestCommand.cmake
  DunePythonVirtualenv.cmake
  DuneSphinxDoc.cmake
  DuneSphinxCMakeDoc.cmake
  DuneStreams.cmake
  DuneSymlinkOrCopy.cmake
  DuneTestMacros.cmake
  FinalizeDuneProject.cmake
  FindBLAS.cmake
  FindDunePackage.cmake
  FindGMP.cmake
  FindInkscape.cmake
  FindLAPACK.cmake
  FindLatexMk.cmake
  FindMETIS.cmake
  FindMProtect.cmake
  FindParMETIS.cmake
  FindPTScotch.cmake
  FindQuadMath.cmake
  FindSphinx.cmake
  FindSuiteSparse.cmake
  FindTBB.cmake
  Headercheck.cmake
  latexmkrc.cmake
  Message.cmake
  OverloadCompilerFlags.cmake
  TargetOptionalCompileFeatures.cmake
  TargetSourcesLocal.cmake
  UseInkscape.cmake
  UseLatexMk.cmake
  Utilities.cmake
  DESTINATION ${DUNE_INSTALL_MODULEDIR})
