MODULES = DuneBoost.cmake \
  DuneCommonMacros.cmake  \
  DuneCxaDemangle.cmake   \
  DuneDoc.cmake           \
  DuneDoxygen.cmake       \
  DuneMacros.cmake        \
  DuneMPI.cmake           \
  DunePkgConfig.cmake     \
  DuneStreams.cmake       \
  DuneTestMacros.cmake    \
  DuneTests.cmake         \
  FindBoostFusion.cmake   \
  FindCXX11Conditional.cmake \
  FindCXX11Features.cmake \
  FindGMP.cmake           \
  FindInkscape.cmake      \
  FindMETIS.cmake         \
  FindMProtect.cmake      \
  FindParMETIS.cmake      \
  FindSharedPtr.cmake     \
  LanguageSupport.cmake   \
  UseLATEX.cmake

modulesdir = $(datadir)/cmake/modules
dist_modules_DATA = ${MODULES}

include $(top_srcdir)/am/global-rules
EXTRA_DIST = CMakeLists.txt
